Day 2 Complete: Canvas visualization showing trust decay in real-time!

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "CoordinationLens",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "See AI coordination in real-time",
   "permissions": ["activeTab", "storage"],
   "action": {
@@ -11,6 +11,15 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content/content.js"]
+    }
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["content/three.min.js"],
+      "matches": ["<all_urls>"]
     }
   ]
 }
