--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "CoordinationLens",
-  "version": "0.2.0",
+  "version": "0.1.0",
   "description": "See AI coordination in real-time",
   "permissions": ["activeTab", "storage"],
   "action": {
@@ -9,17 +9,14 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content/content.js"]
-    }
-  ],
-  "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
-  },
-  "web_accessible_resources": [
-    {
-      "resources": ["content/three.min.js"],
-      "matches": ["<all_urls>"]
+      "matches": [
+        "https://chatgpt.com/*", 
+        "https://chat.openai.com/*", 
+        "https://claude.ai/*",
+        "https://*.claude.ai/*"
+      ],
+      "js": ["content/content.js"],
+      "run_at": "document_idle"
     }
   ]
 }
