--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,21 +2,27 @@
   "manifest_version": 3,
   "name": "CoordinationLens",
   "version": "0.1.0",
-  "description": "See AI coordination in real-time",
-  "permissions": ["activeTab", "storage", "downloads"],
+  "description": "Real-time visualization of multi-agent AI coordination",
+  "author": "Preston Lee Horn",
+  "homepage_url": "https://github.com/prestonle/coordination-lens",
+  "permissions": ["activeTab", "storage"],
   "action": {
-    "default_popup": "popup/popup.html"
+    "default_popup": "popup/popup.html",
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
+    }
+  },
+  "icons": {
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   },
   "content_scripts": [
     {
-      "matches": [
-        "https://chatgpt.com/*", 
-        "https://chat.openai.com/*", 
-        "https://claude.ai/*",
-        "https://*.claude.ai/*"
-      ],
-      "js": ["content/content.js"],
-      "run_at": "document_idle"
+      "matches": ["<all_urls>"],
+      "js": ["content/content.js"]
     }
   ]
 }
