--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,7 +5,11 @@
   "description": "Real-time visualization of multi-agent AI coordination",
   "author": "Preston Lee Horn",
   "homepage_url": "https://github.com/prestonle/coordination-lens",
-  "permissions": ["activeTab", "storage", "downloads"],
+  "permissions": [
+    "activeTab",
+    "storage",
+    "downloads"
+  ],
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": {
@@ -21,8 +25,13 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
-      "js": ["content/content.js"]
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content/coordination-analyzer.js",
+        "content/content.js"
+      ]
     }
   ]
 }
