--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,23 +1,4 @@
 {
-  "manifest_version": 3,
-  "name": "CoordinationLens",
-  "version": "0.1.0",
-  "description": "Real-time visualization of multi-agent AI coordination",
-  "author": "Preston Lee Horn",
-  "homepage_url": "https://github.com/prestonle/coordination-lens",
-  "permissions": [
-    "activeTab",
-    "storage",
-    "downloads"
-  ],
-  "action": {
-    "default_popup": "popup/popup.html",
-    "default_icon": {
-      "16": "icons/icon-16.png",
-      "48": "icons/icon-48.png",
-      "128": "icons/icon-128.png"
-    }
-  },
   "icons": {
     "16": "icons/icon-16.png",
     "48": "icons/icon-48.png",
@@ -33,5 +14,34 @@
         "content/content.js"
       ]
     }
+  ],
+  "author": "Preston Lee Horn",
+  "action": {
+    "default_popup": "popup/popup.html",
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
+    }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "content/performance-utils.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ],
+  "description": "Real-time visualization of multi-agent AI coordination",
+  "version": "0.1.0",
+  "homepage_url": "https://github.com/prestonle/coordination-lens",
+  "name": "CoordinationLens",
+  "manifest_version": 3,
+  "permissions": [
+    "activeTab",
+    "storage",
+    "downloads"
   ]
 }
