--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -34,8 +34,8 @@
       ]
     }
   ],
-  "description": "Real-time visualization of multi-agent AI coordination",
-  "version": "0.1.0",
+  "description": "Experimental semantic divergence detector (Research Prototype)",
+  "version": "1.1.0",
   "homepage_url": "https://github.com/prestonle/coordination-lens",
   "name": "CoordinationLens",
   "manifest_version": 3,
